# AVR

./: .gitignore  README.md
AVR_Firmware01/: Makefile  flash.sh
AVR_Firmware01/lib/arduino_motorshield/: motorshield.c  motorshield.h
AVR_Firmware01/lib/led/: led.c  led.h
AVR_Firmware01/lib/scheduler/: scheduler.c  scheduler.h
AVR_Firmware01/lib/timer/: timer.c  timer.h
AVR_Firmware01/lib/utils/: util.h
AVR_Firmware01/src/: main.c
AVR_Firmware02/: avr-atmega2560.json
AVR_Firmware02/src/: main.rs  port.rs  scheduler.rs  serial.rs
AVR_Firmware_Rust/: Cargo.toml
AVR_Firmware_Rust/.cargo/: config.toml
AVR_Firmware_Rust/src/: arduino.rs  main.rs  port.rs  serial.rs
