[package]
name = "AVR_Firmware02"
version = "0.1.0"
edition = "2024"

[dependencies]
avr-device = { version = "0.7.0" , features = ["rt", "atmega2560"]}
panic-halt = "0.2.0"

[profile.dev]
opt-level = "s"
lto = true
panic = "abort"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = 2
panic = "abort"
